z-index resolved

--- a/src/components/Demos.css
+++ b/src/components/Demos.css
@@ -1,5 +1,6 @@
 .demos {
     background-color: white;
+    position: relative;
     z-index: 1;
     padding-top: 70px;
     padding-bottom: 70px;
