--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,8 +1,6 @@
 .header {
-    min-height: 100vh;
+    height: 95vh;
     position: relative;
-    justify-content: center;
-    align-items: center;
     transform-style: preserve-3d;
     z-index: -1;
 }
@@ -10,18 +8,14 @@
 .background,
 .foreground {
     position: absolute;
-    height: 100%;
     width: 100%;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     object-fit: fill;
     z-index: -1;
 }
 
 .background {
     transform: translateZ(-10px) scale(2);
-
-    /* overflow: hidden; */
-    /* z-index: -2; */
 }
 
 .foreground {
